Integrate autograding runner from GitHub action as base class.