@@ -4,7 +4,7 @@
   <parent>
     <groupId>edu.hm.hafner</groupId>
     <artifactId>codingstyle-pom</artifactId>
-    <version>3.37.0</version>
+    <version>3.40.0</version>
     <relativePath />
   </parent>
 
@@ -116,6 +116,16 @@
             <exclude>.*Builder</exclude>
           </excludes>
           <entryPointClassPackage>edu.hm.hafner.grading.assertions</entryPointClassPackage>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <configuration>
+          <argLine>
+            --add-opens java.base/java.util=ALL-UNNAMED
+            --add-opens java.base/java.lang=ALL-UNNAMED
+          </argLine>
         </configuration>
       </plugin>
       <plugin>
